make sure the title link wraps in context sidebar

--- a/web/css/basic.styl
+++ b/web/css/basic.styl
@@ -475,10 +475,10 @@ td p
 	
 .event_list.context_list .event_title 
 	a
-		line-height: 17px
-		padding-top: 3px
-		padding-bottom: 3px
-
+		line-height 17px
+		padding-top 3px
+		padding-bottom 3px
+		max-width sidebar_right_link_width
 
 td.event_title
 	padding-left:3px
